<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_timeline_name"
                android:imeOptions="actionNext"
                android:inputType="text|textCapWords"
                android:maxLines="1"
                tools:text="Stargate" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/parent_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:inputType="none"
            android:maxLines="1"
            android:text="@string/hint_timeline_parent"
            android:textAppearance="?android:textAppearanceSmall" />

        <Button
            android:id="@+id/input_timeline_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:drawableEnd="@drawable/ic_timeline_black_24dp"
            android:inputType="none"
            android:maxLines="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textColorPrimary"
            tools:text="Main" />

        <TextView
            android:id="@+id/delay_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:inputType="none"
            android:maxLines="1"
            android:text="@string/hint_timeline_delay"
            android:textAppearance="?android:textAppearanceSmall" />

        <Button
            android:id="@+id/input_portal_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:drawableEnd="@drawable/ic_delay_black_24dp"
            android:inputType="none"
            android:maxLines="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textColorPrimary"
            tools:text="1912/4/14" />

        <TextView
            android:id="@+id/direction_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:inputType="none"
            android:maxLines="1"
            android:text="@string/hint_portal_direction"
            android:textAppearance="?android:textAppearanceSmall" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/input_direction"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/direction_names"
            android:prompt="@string/hint_portal_direction"
            android:spinnerMode="dropdown" />


    </LinearLayout>
</ScrollView>